# MyAILocalModel

./: README.md  index.html  package.json
.github/workflows/: ci.yml  release.yml
scripts/: fetch-llama-runtime.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
